# jikji-rust

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
crates/jikji-agent/: Cargo.toml
crates/jikji-agent/assets/jikji/: SKILL.md
crates/jikji-agent/src/: lib.rs  routing.rs
crates/jikji-bench/: Cargo.toml
crates/jikji-bench/src/: dataset.rs  eval.rs  io.rs  lib.rs  metrics.rs  models.rs  run.rs
crates/jikji-cli/: Cargo.toml
crates/jikji-cli/src/: agent_commands.rs  args.rs  bench_commands.rs  gui_commands.rs  main.rs  output.rs  post_install_background.rs  post_install_commands.rs  prepare_commands.rs  search_commands.rs  search_graph.rs  search_prepare_options.rs  search_refresh.rs
crates/jikji-cli/src/args/: agent.rs  bench.rs  gui.rs  prepare.rs  search.rs
crates/jikji-cli/src/gui_commands/: http.rs  routing.rs  token.rs
crates/jikji-cli/tests/: agent_gui_bench_parity.rs  media_prepare_bridge.rs  prepare_clean_doctor_parity.rs  search_find_parity.rs  task3_prepare_clean_doctor_map_contract.rs  task8_parity_blockers.rs
crates/jikji-cli/tests/agent_gui_bench_parity/: mod.rs
crates/jikji-cli/tests/prepare_clean_doctor_parity/: clean_security.rs  prepare_security.rs  python_options.rs  safety_misc.rs
crates/jikji-cli/tests/search_find_parity/: adversarial.rs  contracts.rs  fixture.rs
crates/jikji-cli/tests/task3_prepare_clean_doctor_map_contract/: helpers.rs
crates/jikji-cli/tests/task8_parity_blockers/: cli.rs  security.rs  structured.rs  support.rs
crates/jikji-core/: Cargo.toml
crates/jikji-core/src/: lib.rs
crates/jikji-index/: Cargo.toml
crates/jikji-index/src/: artifact_rows.rs  artifact_writer.rs  artifacts.rs  clean.rs  clean_agent_rules.rs  clean_cache.rs  clean_targets.rs  doc_cache.rs  doc_chunks.rs  doc_media.rs  doc_prune.rs  doc_text_cache.rs  doctor.rs  file_io.rs  lib.rs  lock.rs  scan.rs
crates/jikji-index/tests/: prepare_clean_doctor_parity.rs
crates/jikji-media-bridge/: Cargo.toml
crates/jikji-media-bridge/src/: lib.rs
crates/jikji-media-bridge/tests/: media_bridge_contract.rs
crates/jikji-parity/: Cargo.toml
crates/jikji-parity/src/: lib.rs
crates/jikji-parity/tests/: golden_cli_parity.rs
crates/jikji-parity/tests/golden_cli_parity/: contracts.rs  fixture.rs
crates/jikji-parser/: Cargo.toml
crates/jikji-parser/src/: archive.rs  binary.rs  container.rs  lib.rs  media.rs  structured.rs  text.rs  utils.rs
crates/jikji-parser/tests/: parser_contract.rs
crates/jikji-search/: Cargo.toml
crates/jikji-search/src/: answer_pack.rs  artifacts.rs  brief.rs  cache_text.rs  discover.rs  discover_contract.rs  discover_query.rs  graph.rs  graph_artifacts.rs  index_rows.rs  indexer.rs  io.rs  lib.rs  map_query.rs  map_rescore.rs  scoring.rs  searcher.rs  sqlite_index.rs  status.rs  stopwords.rs  tokenizer.rs
crates/jikji-search/tests/: search_find_parity.rs
docs/: agent-installation.md  agent-usage.md  ci-parity-benchmark-2026-06-29.md  hippocamp-benchmark.md  hippocamp-rerun-report.json  hippocamp-rerun-report.md  index.html  jikji-benchmarks.html  jikji-value-report.json  jikji-value.html  llm-wiki-graph.md  local-agent-search-standard.md  media-benchmark.md  public-benchmark-catalog.md  publicdata-agent-benchmark.md  release-publishing.md  rust-port-benchmark-report.html  rust-port-feasibility.md  rust-port-parity-report.md  schema.md  victoria-python-rust-eval-report.json  victoria-python-rust-eval-report.python-report.json  victoria-python-rust-eval-report.rust-report.json  workspacebench-benchmark.md
python/jikji/: pyproject.toml
python/jikji/src/jikji/: __init__.py  agent_index.py  agent_skill_install.py  answer_pack.py  beir.py  benchmark_two_call.py  benchmark_value.py  config.py  edith.py  eval.py  gui.py  hardbench.py  hermes_answer_pack.py  hermes_bench.py  hermes_compare.py  hippocamp.py  holdout_eval.py  improvement_loop.py  metadata.py  models.py  publicdata_bench.py  scanner.py  search_index.py  workspacebench.py
python/jikji/src/jikji/parsers/: __init__.py  archive.py  hwp.py  media.py  office.py  pdf.py  registry.py  structured.py  text.py
python/jikji/tests/: test_benchmark_two_call_contract.py  test_benchmark_value_contract.py  test_docs_value_contract.py  test_eval_search_helpers.py  test_hermes_compare_contract.py  test_holdout_eval.py  test_jikji_prepare.py
scripts/qa/: real_surface_cli.sh
scripts/release/: build-artifacts.sh
skills/jikji/: SKILL.md
src/jikji/: __main__.py  agent_brief.py  agent_index.py  answer_pack.py  config.py  discover.py  eval.py  graph_query.py  gui.py  hermes_bench.py  hermes_compare.py  llm_wiki.py  search_index.py
src/jikji/parsers/: media.py
tests/: test_answer_pack_contract.py  test_docs_value_contract.py  test_hermes_answer_pack_contract.py  test_jikji_prepare.py
tests/golden/python/: manifest.json
tests/golden/python/scenarios/answer_pack_shell/: commands.json  generated_files.json
tests/golden/python/scenarios/answer_pack_shell/artifacts/: .jikji__agent_map.md  .jikji__autorag_manifest.json  .jikji__chunk_map.jsonl  .jikji__corpus_profile.json  .jikji__doc_meta__sha256_e11b9d9763dbcc461fc6aea37579d5b2319f9d56818586c2705c3f07d46e0f89.json  .jikji__document_index.jsonl  (+13 more)
tests/golden/python/scenarios/ascii_cjk_paths/: commands.json  generated_files.json
tests/golden/python/scenarios/clean_safety/: commands.json  generated_files.json
tests/golden/python/scenarios/stale_index_find/: commands.json  generated_files.json
tests/golden/python/scenarios/structured_archive_media/: commands.json  generated_files.json
tests/parity/: test_artifact_policy.py  test_monorepo_layout.py  test_python_golden_contract.py
tools/parity/: audit_plan_completion.py  capture_python_golden.py  check_scope_fidelity.py  compare_victoria_python_eval.py  golden_fixtures.py  parity_artifact_schema.py  parity_artifacts.py  parity_capture.py  parity_commands.py  parity_golden.py  parity_json.py  parity_report.py  parity_scenarios.py  run_rust_vs_python.py  scope_contract.py
(+64 files in other folders)
