[workspace]
members = [
    "crates/jikji-agent",
    "crates/jikji-bench",
    "crates/jikji-cli",
    "crates/jikji-core",
    "crates/jikji-index",
    "crates/jikji-media-bridge",
    "crates/jikji-parser",
    "crates/jikji-parity",
    "crates/jikji-search",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/NomaDamas/jikji-rust"

[workspace.dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
getrandom = "0.4.3"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0.17"
tempfile = "3"
jikji-agent = { path = "crates/jikji-agent", version = "0.1.0" }
jikji-bench = { path = "crates/jikji-bench", version = "0.1.0" }
jikji-core = { path = "crates/jikji-core", version = "0.1.0" }
jikji-index = { path = "crates/jikji-index", version = "0.1.0" }
jikji-media-bridge = { path = "crates/jikji-media-bridge", version = "0.1.0" }
jikji-parser = { path = "crates/jikji-parser", version = "0.1.0" }
jikji-search = { path = "crates/jikji-search", version = "0.1.0" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
non_ascii_idents = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = "line-tables-only"
