[package]
name = "jikji-media-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Optional media bridge API scaffolding for Jikji OCR and ASR integrations."

[features]
default = []
python = []

[dependencies]
jikji-core.workspace = true
serde.workspace = true
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
