[package]
name = "jikji-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser trait and registry scaffolding for reusable Jikji document parsing."

[dependencies]
bzip2 = "0.4"
encoding_rs = "0.8"
flate2 = "1"
jikji-core.workspace = true
mailparse = "0.16"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tar = "0.4"
xz2 = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
