[package]
name = "jikji-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable Jikji search, graph, brief, and answer-pack contracts."

[dependencies]
jikji-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
