[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jikji"
version = "0.1.0"
description = "Non-destructive local file knowledge maps for AI agents."
license = "MIT"
readme = { text = "Jikji Python reference, benchmark, and media compatibility package.", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pypdf>=5.0",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "openpyxl>=3.1",
  "olefile>=0.47",
]

[project.optional-dependencies]
# Optional CPU-only media backends, auto-detected at runtime. Pure metadata
# extraction still works without these installed.
ocr = ["rapidocr-onnxruntime>=1.4.0"]
transcribe = ["faster-whisper>=1.1.0"]
media = ["rapidocr-onnxruntime>=1.4.0", "faster-whisper>=1.1.0"]

[project.scripts]
jikji = "jikji.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
